<resources>
    <string name="app_name">MoonLader</string>
    <string name="e_mail">E-Mail</string>
    <string name="txt_password">비밀번호</string>
    <string name="txt_signIn">로그인</string>
    <string name="txt_register">회원가입</string>
    <string name="txt_checkPassword">한번 더</string>
    <string name="txt_nickName">닉네임</string>
    <string name="txt_home">홈</string>
    <string name="txt_controller">컨트롤러</string>
    <string name="txt_more">더 보기</string>
    <string name="empty">""</string>
    <string name="txt_startGame">게임 시작</string>
</resources>